--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - 'ClassNotes.Api/**'
+      - 'ClassNotes.api/**'
       - '.github/workflows/backend.yml'
 
 jobs:
